# superfast_rsync

./: .gitignore  Cargo.toml  README.md  examples_README.md
benches/: rsync_bench.rs
docs/: README.md
examples/: performance_test.rs
fuzz/: Cargo.toml
src/: consts.rs  diff.rs  hashmap_variant.rs  lib.rs  patch.rs  signature.rs  tests.rs
src/blake3/: mod.rs
src/md4/: mod.rs
tools/: build.sh  run_comprehensive_tests.py
