[package]
name = "rsync-fuzz"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Fuzz testing for superfast_rsync"
publish = false

[dependencies]
superfast_rsync = { path = ".." }
honggfuzz.workspace = true
librsync.workspace = true
rand = { workspace = true, features = ["small_rng"] }
